WP-5: New image for link preview

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
     <meta property="og:title" content="Wing Har | Digital Portfolio" />
     <meta property="og:description" content="Full Stack Engineer and Digital Marketing Professional - Creating innovative solutions across web development and multi-platform advertising" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://winghar.com/lovable-uploads/wing_har.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://winghar.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Wing Har | Digital Portfolio" />
+    <meta name="twitter:description" content="Product Manager with Full Stack Engineer and Marketing Experience - Creating innovative engineering solutions and multi-platform advertising" />
+    <meta name="twitter:image" content="https://winghar.com/lovable-uploads/wing_har.png" />
   </head>
 
   <body>
